--- a/toneTest.html
+++ b/toneTest.html
@@ -318,6 +318,7 @@
 						<button class="btn btn-info" id = "min">minor chord</button>
 						<button class="btn btn-success" id = "repeat" disabled="true">repeat</button>
 						<button class="btn btn-danger" id = "validate">check</button>
+						<button id = "reset">Reset</button>
 						<button class="btn btn-warning" onclick="showModal()">使用說明</button>
 						<!-- <p id = "showanswer"></p> -->
                     </div>			
@@ -388,10 +389,10 @@
                                 <p>"辨別:大和弦&小和弦"共有5個按鈕
                                 	<br>第一個按鈕major chord: 會隨機出題(為major chord的題目)
                                 	<br>第二個按鈕minor chord: 會隨機出題(為minor chord的題目)
-                                	<br>第三個按鈕repeat: 會重複最近的題目一次
-
+                                	<br>第三個按鈕repeat: 會重複最近的題目一次		
                                 	<br>第四個按鈕check: 確認答案
-                                	<br>第五個按鈕使用說明: 就是現在看到這個</p> 
+					<br>第五個按鈕reset: 重置琴鍵
+                                	<br>第六個按鈕使用說明: 就是現在看到這個</p> 
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">我瞭解了！</button>
