--- a/toneTest.html
+++ b/toneTest.html
@@ -318,7 +318,7 @@
 						<button class="btn btn-info" id = "min">minor chord</button>
 						<button class="btn btn-success" id = "repeat" disabled="true">repeat</button>
 						<button class="btn btn-danger" id = "validate">check</button>
-						<button id = "reset">Reset</button>
+						<button class="btn btn-danger" id = "reset">Reset</button>
 						<button class="btn btn-warning" onclick="showModal()">使用說明</button>
 						<!-- <p id = "showanswer"></p> -->
                     </div>			
