--- a/toneTest.html
+++ b/toneTest.html
@@ -86,10 +86,15 @@
 	   padding-bottom: 10px;
 	   color: white;
 	}
-	ul .active {
-	   box-shadow: 0px 1px 3px grey;
+	ul .correct {
+	   background: rgba(34, 153, 84, 0.3);
 	}
-
+	ul .wrong {
+	   background: rgba(231, 76, 60, 0.3);
+	}
+	.notename {
+		font-size: 10px;
+	}
 	h1:hover{
 		color: rgba(255,100,100,0.7);
 	}
