--- a/toneTest.html
+++ b/toneTest.html
@@ -281,7 +281,7 @@
 	<div class="jumbotron text-center bg-dark text-white" style="background-color: rgb(30,30,30); color: white;">
 	 	<h1 class= "fasterfont">Music For Beginners</h1>
 	 	<blockquote class = "blockquote">
-		 	<p class= "sniglet">Without music, life would be a mistake
+		 	<p class= "elite">Without music, life would be a mistake
 			<footer class = "blockquote-footer">Friedrich Nietzsche</footer>
 			</p>
 	  	</blockquote>
