--- a/toneTest.html
+++ b/toneTest.html
@@ -102,7 +102,15 @@
 	p:hover{
     	color: rgba(18, 205, 255, 0.7);
     }
-
+	#page2_btn{
+    	font-family: '標楷體', cursive;
+    }
+    #page2_btn1{
+    	font-family: '標楷體', cursive;
+    }
+    #page2_btn2{
+    	font-family: '標楷體', cursive;
+    }
 	</style>
 	<script>
     	function showModal() {
