--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<div class="container">   
   		<h1>ღ音樂有你ღ<br>Music For Beginners</h1>    
   		<p>本網站能使想玩音樂的初學者一步一腳印的累積音樂的基礎。</p>
-  		<p><a class="btn btn-primary btn-lg" href="toneTest.html" role="button">Learn more »</a></p>
+  		<p><a class="btn btn-primary btn-lg" href="toneTest.html" role="button">Learn more »</a>
+			<a href = "https://docs.google.com/presentation/d/1H3VrSdD5KcKz5uk9t6Bs2vIzBOsfMR89WJMvgio7mMY/edit#slide=id.gb3d7bc66a5_3_10">documentation</a></p>
   		<div class="container">
 		<div class="row">
 			<article>
